--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --env-file=.env server.js"
+    "start": "nodemon server2.js"
   },
   "author": "Babucarr-Badjie",
   "license": "ISC",
